  PropertyStore.propertyValue(), nullValue parameter added, false by default for Boolean values
  DefaultValueMap constructor now copies the maps received as parameters instead of using them internally
  PropertyStore now loads all properties into System properties on construction
  DefaultEntity, referencedKeyCache functionality refactored, keys cached when created
  DefaultLocalEntityConnection, now caches query column strings containing all entity columns, which is used most of the time
  Condition, moved a couple of interfaces up to package level
  CustomStringCondition removed, perhaps even finally
  DatabaseConnection, poolTime and retryCount fields removed, some refactoring
  ValueFetcher and ValueConverter moved to ColumnProperty
  Databases.INTEGER_RESULT_PACKER and LONG_RESULT_PACKER removed
  DatabaseConnectionProvider removed
  ValueChange.isInitialization() removed, unused
  FilterCondition removed, replaced with Predicate
  EntityConnectionServerAdmin.removeConnections() renamed to disconnectClients()
  AbstractRemoteEntityConnection refactoring
  DefaultEntityConnectionServer.MaintenanceTask now logs errors instead of rethrowing
  DefaultLocalEntityConnection.EntityArgumentStringProvider moved to LocalEntityConnections
  Entity.OrderBy moved up to package level, now a concrete final class instead of interface
  DefaultLocalEntityConnection, EntityResultPacker and EntityResultIterator moved up to package level
  DefaultLocalEntityConnection.getReferencedKeys() moved to Entities
  jminor-plugin-jackson-json module added
  Jackson json improvements
  Jackson json, domain related moved to .domain and .db package created, ConditionObjectMapper added
  Jackson json, CustomCondition implemented
  ValueChange.isInitialization() reintroduced, used after all
  AbstractFilteredTableModel.filterContents() now calls fireTableDataChanged() after filtering, otherwise table did not repaint correctly